--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:4m+psqbGdrFomScxe4QZ8BGfLKCtUu/Z0m7PjdtVwxg=
+APP_KEY=base64:ezRGetrt1X+qj4heQBbWxW0AXffsxMCuxHmUJBFvhkg=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -24,8 +24,8 @@ DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
 DB_PORT=5432
 DB_DATABASE=flakes
-DB_USERNAME=postgres
-DB_PASSWORD=password
+DB_USERNAME=myuser
+DB_PASSWORD=postgres
 
 
 SESSION_DRIVER=database
