--- a/.env
+++ b/.env
@@ -24,8 +24,8 @@ DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
 DB_PORT=5432
 DB_DATABASE=flakes
-DB_USERNAME=myuser
-DB_PASSWORD=postgres
+DB_USERNAME=postgres
+DB_PASSWORD=password
 
 
 SESSION_DRIVER=database
