--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,12 @@
 *.html diff=html
 *.md diff=markdown
 *.php diff=php
+*.png binary
+*.jpg binary
+*.jpeg binary
+*.gif binary
+*.webp binary
+
 
 /.github export-ignore
 CHANGELOG.md export-ignore
